work on swagger tool
